:factory: make generate
